@@ -305,6 +305,13 @@ g.V().out().map(lambda: "x: len(x.get().value('name'))").sum().toList()         
 <7> The default lambda language is changed back to Gremlin-Python.
 <8> If the `lambda`-prefix is not provided, then it is appended automatically in order to give a more natural look to the expression.
 
+=== Limitations
+
+* Traversals that return a `Set` will be coerced to a `List` in Python so that traversals return consistent results
+within a collection across different languages. In the case of Python, number equality is different from JVM languages
+which produces different `Set` results when those types are in use. If a `Set` is needed then convert `List` results
+to `Set` manually.
+
 [[gremlin-DotNet]]
 == Gremlin.Net
 
